# multibeggar

./: pyproject.toml
.github/workflows/: pytest.yml
src/multibeggar/: __main__.py  multibeggar.py
